; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_blame_git.c_diff_hunks.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_blame_git.c_diff_hunks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_17__ = type { i64 }
%struct.TYPE_14__ = type { i32 }
%struct.TYPE_15__ = type { i32, i32 }
%struct.TYPE_16__ = type { i8*, i32 }

@my_emit = common dso_local global i32 0, align 4
@GIT_XDIFF_MAX_SIZE = common dso_local global i64 0, align 8
@GIT_ERROR_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"file too large to blame\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i8*)* @diff_hunks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_hunks(i64 %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_17__, align 8
  %6 = alloca %struct.TYPE_17__, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_14__, align 4
  %9 = alloca %struct.TYPE_15__, align 4
  %10 = alloca %struct.TYPE_16__, align 8
  %11 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %5, i32 0, i32 0
  store i64 %0, i64* %11, align 8
  %12 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %6, i32 0, i32 0
  store i64 %1, i64* %12, align 8
  store i8* %2, i8** %7, align 8
  %13 = bitcast %struct.TYPE_14__* %8 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %13, i8 0, i64 4, i1 false)
  %14 = bitcast %struct.TYPE_15__* %9 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %14, i8 0, i64 8, i1 false)
  %15 = bitcast %struct.TYPE_16__* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %15, i8 0, i64 16, i1 false)
  %16 = load i32, i32* @my_emit, align 4
  %17 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %9, i32 0, i32 0
  store i32 %16, i32* %17, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %10, i32 0, i32 0
  store i8* %18, i8** %19, align 8
  %20 = call i32 @trim_common_tail(%struct.TYPE_17__* %5, %struct.TYPE_17__* %6, i32 0)
  %21 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %5, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @GIT_XDIFF_MAX_SIZE, align 8
  %24 = icmp sgt i64 %22, %23
  br i1 %24, label %30, label %25

25:                                               ; preds = %3
  %26 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %6, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @GIT_XDIFF_MAX_SIZE, align 8
  %29 = icmp sgt i64 %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %25, %3
  %31 = load i32, i32* @GIT_ERROR_INVALID, align 4
  %32 = call i32 @git_error_set(i32 %31, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %4, align 4
  br label %35

33:                                               ; preds = %25
  %34 = call i32 @xdl_diff(%struct.TYPE_17__* %5, %struct.TYPE_17__* %6, %struct.TYPE_14__* %8, %struct.TYPE_15__* %9, %struct.TYPE_16__* %10)
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %33, %30
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @trim_common_tail(%struct.TYPE_17__*, %struct.TYPE_17__*, i32) #2

declare dso_local i32 @git_error_set(i32, i8*) #2

declare dso_local i32 @xdl_diff(%struct.TYPE_17__*, %struct.TYPE_17__*, %struct.TYPE_14__*, %struct.TYPE_15__*, %struct.TYPE_16__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
